commenting main.less

--- a/less/main.less
+++ b/less/main.less
@@ -1,13 +1,21 @@
+//-------------------------------------------------------------------
 // Core variables and mixins
+//-------------------------------------------------------------------
 @import "variables.less";
 @import "mixins.less";
 
+
+//-------------------------------------------------------------------
 // Reset and dependencies
+//-------------------------------------------------------------------
 @import "normalize.less";
 //@import "print.less";
 //@import "glyphicons.less";
 
+
+//-------------------------------------------------------------------
 // Core CSS
+//-------------------------------------------------------------------
 @import "core/scaffolding.less";
 @import "core/type.less";
 //@import "code.less";
@@ -16,7 +24,10 @@
 //@import "forms.less";
 @import "core/buttons.less";
 
+
+//-------------------------------------------------------------------
 // Components
+//-------------------------------------------------------------------
 //@import "components/component-animations.less";
 //@import "components/dropdowns.less";
 //@import "components/button-groups.less";
@@ -39,13 +50,18 @@
 //@import "components/wells.less";
 //@import "components/close.less";
 
+
+//-------------------------------------------------------------------
 // Components w/ JavaScript
+//-------------------------------------------------------------------
 //@import "modals.less";
 //@import "tooltip.less";
 //@import "popovers.less";
 //@import "carousel.less";
 
 
+//-------------------------------------------------------------------
 // Utility classes
+//-------------------------------------------------------------------
 @import "utilities/utilities.less";
 @import "utilities/responsive-utilities.less";
