updated-note: has modified color + backgrounds file - otherwise bootstrap untouched

--- a/less/components/panels.less
+++ b/less/components/panels.less
@@ -18,6 +18,12 @@
   &:extend(.clearfix all);
 }
 
+// Mikes edit
+// give first paragraph margin top
+.first-paragraph {
+  margin-top: 22px;
+}
+
 // Optional heading
 .panel-heading {
   padding: @panel-heading-padding;
