--- a/less/main.less
+++ b/less/main.less
@@ -1,21 +1,13 @@
-//-------------------------------------------------------------------
 // Core variables and mixins
-//-------------------------------------------------------------------
 @import "variables.less";
 @import "mixins.less";
 
-
-//-------------------------------------------------------------------
 // Reset and dependencies
-//-------------------------------------------------------------------
 @import "normalize.less";
 //@import "print.less";
-//@import "glyphicons.less";
+@import "glyphicons.less";
 
-
-//-------------------------------------------------------------------
 // Core CSS
-//-------------------------------------------------------------------
 @import "core/scaffolding.less";
 @import "core/type.less";
 //@import "code.less";
@@ -23,24 +15,22 @@
 //@import "tables.less";
 //@import "forms.less";
 @import "core/buttons.less";
+@import "core/backgrounds.less";
 
-
-//-------------------------------------------------------------------
 // Components
-//-------------------------------------------------------------------
 //@import "components/component-animations.less";
 //@import "components/dropdowns.less";
 //@import "components/button-groups.less";
 //@import "components/input-groups.less";
-//@import "components/navs.less";
+@import "components/navs.less";
 //@import "components/navbar.less";
 //@import "components/breadcrumbs.less";
 //@import "components/pagination.less";
 //@import "components/pager.less";
-//@import "components/labels.less";
+@import "components/labels.less";
 //@import "components/badges.less";
 //@import "components/jumbotron.less";
-//@import "components/thumbnails.less";
+@import "components/thumbnails.less";
 //@import "components/alerts.less";
 //@import "components/progress-bars.less";
 //@import "components/media.less";
@@ -50,19 +40,16 @@
 //@import "components/wells.less";
 //@import "components/close.less";
 
-
-//-------------------------------------------------------------------
 // Components w/ JavaScript
-//-------------------------------------------------------------------
-//@import "modals.less";
+@import "components+javascript/modals.less";
 //@import "tooltip.less";
 //@import "popovers.less";
 //@import "carousel.less";
 
 
-//-------------------------------------------------------------------
 // Utility classes
-//-------------------------------------------------------------------
 @import "utilities/utilities.less";
 @import "utilities/responsive-utilities.less";
-@import "utilities/spacing_helpers.less"
+@import "spacing_helpers.less";
+
+// Fiddle space
