--- a/less/main.less
+++ b/less/main.less
@@ -10,20 +10,20 @@
 // Core CSS
 @import "core/scaffolding.less";
 @import "core/type.less";
-//@import "code.less";
+//@import "core/code.less";
 @import "core/grid.less";
-//@import "tables.less";
-//@import "forms.less";
+//@import "core/tables.less";
+@import "core/forms.less";
 @import "core/buttons.less";
 @import "core/backgrounds.less";
 
 // Components
-//@import "components/component-animations.less";
-//@import "components/dropdowns.less";
+@import "components/component-animations.less";
+@import "components/dropdowns.less";
 //@import "components/button-groups.less";
 //@import "components/input-groups.less";
 @import "components/navs.less";
-//@import "components/navbar.less";
+@import "components/navbar.less";
 //@import "components/breadcrumbs.less";
 //@import "components/pagination.less";
 //@import "components/pager.less";
@@ -53,3 +53,4 @@
 @import "spacing_helpers.less";
 
 // Fiddle space
+
